<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primary_color">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/enter_your_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.2">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="?attr/primary_color"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/primary_color"
                android:hint="@string/enter_your_email_address"
                android:maxLines="1"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:singleLine="true"
                android:textColor="?attr/background_color"
                android:textColorHint="?attr/background_color"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="?attr/primary_color"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/primary_color"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:singleLine="true"
                android:textColor="?attr/background_color"
                android:textColorHint="?attr/background_color"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:id="@+id/cardView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="4"
                app:cardBackgroundColor="?attr/surface_color"
                app:cardCornerRadius="5dp"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/primary_color"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:singleLine="true"
                    android:textColor="?attr/background_color"
                    android:textColorHint="?attr/background_color"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="6"
                app:cardBackgroundColor="?attr/surface_color"
                app:cardCornerRadius="5dp"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/primary_color"
                    android:hint="@string/last_name"
                    android:maxLines="1"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:singleLine="true"
                    android:textColor="?attr/background_color"
                    android:textColorHint="?attr/background_color"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="?attr/background_color"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="10"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/sign_up"
                android:textColor="?attr/primary_color"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/primary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="@+id/sign_up"
        app:layout_constraintTop_toTopOf="@+id/sign_up" />


</androidx.constraintlayout.widget.ConstraintLayout>